
noinst_LTLIBRARIES = libfileio.la
SUBDIRS =
libfileio_la_SOURCES = align.h fasta.cpp fasta.h infile.cpp infile.h intra.fwd.h intra.h naming.cpp naming.h outtra.cpp outtra.h pdb.cpp pdb.h psfdcd.cpp psfdcd.h trablocks.cpp trablocks.h tra.cpp tra.fwd.h tra.h tratypes.cpp tratypes.h
INCLUDES = -I@top_srcdir@/src/mmlib
