
noinst_LTLIBRARIES = libforcefields.la
SUBDIRS =
libforcefields_la_SOURCES = breakablebonded.cpp breakablebonded.h example.cpp example.h ffbonded.cpp ffbonded.h ffcustom.cpp ffcustom.h ffparam.cpp ffparam.h ffsoftvdw.cpp ffsoftvdw.h forcefield.cpp forcefield.fwd.h forcefield.h gbff.cpp gbff.h lcpo.cpp lcpo.h nonbonded.cpp nonbonded.h nonbonded_ti.cpp nonbonded_ti.h nonbonded_ti_linear.cpp nonbonded_ti_linear.h nonbonded_ti_linear_openmp.cpp nonbonded_ti_linear_openmp.h numsasa.cpp numsasa.h pops.cpp pops.h restraint_atomdist.cpp restraint_atomdist.h restraintbase.cpp restraintbase.h restraint_internal.cpp restraint_internal.h restraint_native_contact.cpp restraint_native_contact.h restraint_positional.cpp restraint_positional.h restraint_rigidbody.cpp restraint_rigidbody.h restraint_torsional.cpp restraint_torsional.h sasabase.cpp sasabase.h
INCLUDES = -I@top_srcdir@/src/mmlib
