
noinst_LTLIBRARIES = libprotocols.la
SUBDIRS =
libprotocols_la_SOURCES = dualffminimiser.cpp dualffminimiser.h energy.cpp energy.h example.cpp example.h md.cpp md.h minimise.cpp minimise.h montecarlo.cpp montecarlo.h nmode.cpp nmode.h protocolbase.cpp protocolbase.h remd.cpp remd.h rerun.cpp rerun.h scpack.cpp scpack.h temperature.h torsionalminimisation.cpp torsionalminimisation.h
INCLUDES = -I@top_srcdir@/src/mmlib
