
noinst_LTLIBRARIES = libsystem.la
SUBDIRS =
libsystem_la_SOURCES = atomrangestore.cpp atomrangestore.h fundamentals.cpp fundamentals.fwd.h fundamentals.h genpolymer.cpp genpolymer.h molecule_base_array.h molecule.cpp molecule.fwd.h molecule.h proximitygrid.cpp proximitygrid.h rebuilder.cpp rebuilder.h system.cpp system.fwd.h system.h workspacecreator.cpp workspacecreator.fwd.h workspacecreator.h
INCLUDES = -I@top_srcdir@/src/mmlib
