
noinst_LTLIBRARIES = libtools.la
SUBDIRS =
libtools_la_SOURCES = cloneholder.h counted_ptr.h debugtools.cpp debugtools.h draw.cpp draw.h enum.h io.cpp io.h quicksort.cpp quicksort.h quote.cpp quote.h rdstdout.cpp rdstdout.h safeformat.cpp safeformat.h statclock.cpp statclock.h streamtool.cpp streamtool.h streamwriter.cpp streamwriter.h stringbuilder.cpp stringbuilder.h stringtool.cpp stringtool.h vector.h
INCLUDES = -I@top_srcdir@/src/mmlib
