
noinst_LTLIBRARIES = libworkspace.la
SUBDIRS =
libworkspace_la_SOURCES = bondorder.cpp bondorder.fwd.h bondorder.h cluster.cpp cluster.h componentbase.h hamiltonian.h neighbourlist.cpp neighbourlist.fwd.h neighbourlist.h pospointer.cpp pospointer.h rotbond.cpp rotbond.fwd.h rotbond.h snapshot.cpp snapshot.fwd.h snapshot.h space.cpp space.fwd.h space.h workspace.cpp workspace.fwd.h workspace.h
INCLUDES = -I@top_srcdir@/src/mmlib
